# vortex

./: .env.example  .gitignore  CLAUDE.md  Pivot.md  README.md  angular.json  docker-compose.e2e.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  tsconfig.json
backend/: Dockerfile  README.md  config.example.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_core_catalog.py  005_user_entra_object_id.py  006_drop_app_roles_tables.py  007_chat_conversations_rename.py  008_chat_settings_object_check.py  010_catalog_models.py  011_catalog_model_config.py  012_rm_example_locked.py  013_knowledge_bases_conversation_kb.py  016_catalog_models_api_model_id.py  018_conversation_memory.py  019_user_memories.py  020_document_ingest_error.py  021_user_mem_is_system.py  023_multitenancy.py  024_org_invites.py  025_chat_uploads.py  026_gemini_models_disable_openai.py  030_seed_default_policies.py
backend/src/ai_portal/: catalog_model_definitions.py  catalog_specs.py  celery_app.py  config.py  litellm_catalog_definitions.py  logging_config.py  main.py  worker.py
backend/src/ai_portal/api/: assistants.py  auth.py  chat.py  conversations.py  deps.py  documents.py  e2e.py  knowledge_bases.py  me.py  memories.py  model_catalog.py  orgs.py  rbac.py  setup.py
backend/src/ai_portal/assistant/: model.py  router.py
backend/src/ai_portal/audit/: model.py  schemas.py
backend/src/ai_portal/auth/: __init__.py  deps.py  entra.py  jwt.py  manager.py  repository.py  router.py  routes_me.py  routes_orgs.py  schemas.py  service.py
backend/src/ai_portal/catalog/: definitions.py  repository.py  router.py  schemas.py  service.py  specs.py
backend/src/ai_portal/chat/: context_window.py  memory_context.py  model.py  repository.py  router.py  routes_memories.py  schemas.py  service.py  streaming_service.py  tool_service.py
backend/src/ai_portal/core/: config.py  routes_e2e.py
backend/src/ai_portal/db/: __init__.py  base.py  json_types.py  session.py  tenant.py
backend/src/ai_portal/knowledge_base/: ingest_service.py  model.py  repository.py  router.py  schemas.py  service.py
backend/src/ai_portal/memory/: model.py  router.py
backend/src/ai_portal/middleware/: setup_guard.py  tenant_context.py
backend/src/ai_portal/models/: __init__.py  assistant.py  catalog_model.py  chat.py  connector.py  document.py  knowledge_base.py  memory.py  org.py  org_invite.py  user.py  user_portal_api_key.py
backend/src/ai_portal/rag/: service.py
backend/src/ai_portal/rbac/: evaluator.py  model.py  (+1 more)
backend/tests/: test_assistants_api.py  test_auth_api.py  test_auth_entra.py  test_auth_utils.py  test_builtin_tools_e2e.py  test_capability_toggles.py  test_catalog_model_validate.py  test_catalog_repository.py  test_catalog_service.py  test_chat_api.py  test_config_ingest_rag.py  test_config_validation.py  test_conversation_window.py  test_conversations_api.py  test_data_query.py  test_document_model_fields.py  test_domain_imports.py  test_embedding.py  test_fetch_providers.py  test_fetch_webpage_tool.py  test_health.py  test_ingest_chunking.py  test_ingest_job.py  test_ingest_progress.py  test_ingest_readers.py  test_ingest_worker.py  test_knowledge_bases_api.py  test_langchain_native_tools.py  test_litellm_chat_kwargs.py  test_litellm_registry.py  test_memory_extractor.py  test_memory_injection.py  test_memory_model.py  test_memory_summarizer.py  test_model_catalog_api.py  test_model_routing_chat.py  test_models_smoke.py  test_native_anthropic_provider.py  test_native_gemini_provider.py  test_org_model.py  (+11 more)
backend/tests/chat/: test_streaming_service_sse_shape.py
server/api/: .env.example  =6.0  Dockerfile  README.md  pyproject.toml  run_dev.py
server/api/alembic/: env.py
server/api/scripts/: check_types_align.py
server/api/tests/: _smoke_auth.py  conftest.py  test_alembic_clean_upgrade.py  test_audit_events.py  test_audit_immutability.py  test_auth_api.py  test_auth_repository.py  test_auth_utils.py  test_bootstrap_org.py  test_bruteforce.py  test_bruteforce_extended.py  test_builtin_tools_e2e.py  test_capability_toggles.py  test_catalog_repository.py  test_catalog_service.py  test_config_validation.py  test_control_plane_deps.py  test_control_plane_routes.py  test_conversation_window.py  test_fetch_providers.py  test_fetch_webpage_tool.py  test_health.py  test_ingest_job.py  test_invite_accept.py  test_knowledge_bases_api.py  test_memory_injection.py  test_memory_summarizer.py  test_mfa_totp.py  test_models_smoke.py  test_oidc_bearer_auth.py  test_oidc_group_acl.py  test_oidc_jwks.py  test_oidc_provisioning.py  test_oidc_role_map.py  test_org_model.py  test_orgs_service.py  test_portal_api_keys.py  test_quota_enforcement.py  test_rag_toolcall_loop.py  test_rbac_catalog.py  (+15 more)
(+1981 files in other folders)
