[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-portal-api"
version = "0.1.0"
description = "AI Portal FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "openai>=1.54",
  "langchain-core>=0.3",
  "langchain-openai>=0.3",
  "langchain-anthropic>=0.3",
  "langchain-google-genai>=2.0",
  "voyageai>=0.3",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "python-multipart>=0.0.9",
  "python-json-logger>=3.2",
  "pypdf>=5.0",
  "pyjwt[crypto]>=2.9",
  "passlib[bcrypt]>=1.7",
  "chonkie[semantic,code]>=1.0",
  "duckduckgo-search>=6.0",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "crawl4ai>=0.4",
  "pandas>=2.0",
  "redis>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
seed-catalog-models = "ai_portal.scripts.seed_catalog_models:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
