[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-portal-api"
version = "0.1.0"
description = "AI Portal FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "openai>=1.54",
  "langchain-core>=0.3",
  "langchain-openai>=0.3",
  "langchain-anthropic>=0.3",
  "langchain-google-genai>=2.0",
  "voyageai>=0.3",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "python-multipart>=0.0.9",
  "python-json-logger>=3.2",
  "pypdf>=5.0",
  "pyjwt[crypto]>=2.9",
  "passlib[bcrypt]>=1.7",
  "chonkie[semantic,code]>=1.0",
  "duckduckgo-search>=6.0",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "crawl4ai>=0.4",
  "pandas>=2.0",
  "redis>=5.0",
  "boto3>=1.40",
  "azure-storage-blob>=12.20",
  "google-cloud-storage>=2.18",
  "authlib>=1.3",
  "python3-saml>=1.16",
  "stripe>=10.0",
  "pyotp>=2.9",
  "scim2-models>=0.3",
  "cryptography>=43.0",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "presidio-analyzer>=2.2",
  "jsonschema>=4",
  "google-api-python-client>=2.140",
  "msal>=1.30",
  # RAG extractors + chunkers (Phase C/D)
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=1.0",
  "pytesseract>=0.3",
  "readability-lxml>=0.8",
  "langchain-text-splitters>=0.3",
  "unstructured>=0.15",
  "langdetect>=1.0",
  # RAG search (Phase I)
  "rank-bm25>=0.2",
  "tavily-python>=0.4",
  # RAG connectors (Phase F)
  "notion-client>=2.2",
  "slack-sdk>=3.31",
  "PyGithub>=2.4",
  "python-gitlab>=4.13",
  "atlassian-python-api>=3.41",
  "simple-salesforce>=1.12",
  "zenpy>=2.0",
  "imapclient>=3.0",
  # Workers — sandbox + git + issue tracker providers
  "docker>=7.1",
  "kubernetes>=31",
  # Control Plane — LDAP / Active Directory directory auth
  "ldap3>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.8", "moto[s3]>=5.0", "respx>=0.21"]

[project.scripts]
seed-catalog-models = "ai_portal.scripts.seed_catalog_models:main"
bootstrap-org = "ai_portal.scripts.bootstrap_org:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
